--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,28 @@
 [tool.poetry]
-name = "airi"
+name = "airi-test-task"
 version = "0.1.0"
 description = "This library contains the code used to run a test job to AIRI."
 authors = ["JohnConnor123 <ivan.eudokimoff2014@gmail.com>"]
 maintainers = ["JohnConnor123 <ivan.eudokimoff2014@gmail.com>"]
-# repository = ""
-# documentation = "" - in progress
+repository = "https://github.com/JohnConnor123/airi-test-task"
+# documentation = ""
 license = "Apache 2.0"
 readme = "README.md"
+packages = [
+    { include = "src" }
+]
+exclude = [
+    "data/*",
+    "src/logs*",
+    "src/notebooks/*",
+    "src/mlflow-init-commands"
+]
 
 [tool.poetry.dependencies]
 python = ">=3.12, <3.13"
-torch = {version = "^2.4.0+cu121", source = "torch-repo"}
-torchaudio = {version = "^2.4.0+cu121", source = "torch-repo"}
-torchvision = {version = "^0.19.0+cu121", source = "torch-repo"}
+# torch = {version = "^2.4.0+cu121", source = "torch-repo"}
+# torchaudio = {version = "^2.4.0+cu121", source = "torch-repo"}
+# torchvision = {version = "^0.19.0+cu121", source = "torch-repo"}
 pandas = "^2.2.2"
 scikit-learn = "^1.5.1"
 numpy = "<2.0.0"
@@ -45,6 +54,7 @@ torch-summary = "^1.4.5"
 hydra-core = "^1.3.2"
 jupyter-bokeh = "^4.0.5"
 flask-socketio = "5.2.0"
+ray = {extras = ["tune"], version = "^2.35.0"}
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.8.0"
